@@ -1,21 +1,6 @@
 AUX eclipse-3.2 1145 RMD160 141c5d412c50dcb106654b4078cbaf379b468130 SHA1 6c317e42b7697d849bbd5616519642be345c74f3 SHA256 920b48ed98bc18f6e90769fe084eced46304c4c1a8b3999c5644297f437b1cbd
-MD5 f6ff94ca35dee12929539c1c6936d7c9 files/eclipse-3.2 1145
-RMD160 141c5d412c50dcb106654b4078cbaf379b468130 files/eclipse-3.2 1145
-SHA256 920b48ed98bc18f6e90769fe084eced46304c4c1a8b3999c5644297f437b1cbd files/eclipse-3.2 1145
 DIST eclipse-sdk-3.2.1-r2-patches.tar.bz2 73279 RMD160 fb064913dae0e49853898463416f6623af58cb21 SHA1 e26f3cf526a51422e8243d209e0ee3f6eb8fe9a7 SHA256 424897f5fc967e4a3a48b4b510853c3a28414468f0d872a544ad5fdce3ecbadc
 DIST eclipse-sourceBuild-srcIncluded-3.2.1.zip 82433420 RMD160 9648176b79adac7217371e5b8dee7aeb4cd458db SHA1 a27bae4ff9f866a1fab995eae2da00ab2be5e840 SHA256 2d6a0628333d068b6ab678c42f925d71df1c003035543830a30e3ee80fb855c7
-EBUILD eclipse-sdk-3.2.1-r2.ebuild 18631 RMD160 01499690dbaa4b2a127134e86d124a2b6452c010 SHA1 ad3eff5e706225de0d9a102d91f8d81867756f73 SHA256 19c78484716b2552d71955373d1070efd3df037600057410b65972a7c41f526f
-MD5 34dae8d0a00e97df3174b88c11189ba1 eclipse-sdk-3.2.1-r2.ebuild 18631
-RMD160 01499690dbaa4b2a127134e86d124a2b6452c010 eclipse-sdk-3.2.1-r2.ebuild 18631
-SHA256 19c78484716b2552d71955373d1070efd3df037600057410b65972a7c41f526f eclipse-sdk-3.2.1-r2.ebuild 18631
-MISC ChangeLog 1131 RMD160 96b983a89bd8ea1399ed2123700ae2150b237ffb SHA1 b41ccf9038fe211e09a78e00f8dcb8ddba5becce SHA256 dbd1efae9d2f7997125dd43c27dcb2be7e44b26379e17d4a25a0e980096290fd
-MD5 853857fbf56464ec08c527a9123e0966 ChangeLog 1131
-RMD160 96b983a89bd8ea1399ed2123700ae2150b237ffb ChangeLog 1131
-SHA256 dbd1efae9d2f7997125dd43c27dcb2be7e44b26379e17d4a25a0e980096290fd ChangeLog 1131
+EBUILD eclipse-sdk-3.2.1-r3.ebuild 19025 RMD160 cc2ab705f58150573c652c82c82b9b4fd21dd4e9 SHA1 1de56f75935d3e2820e20d09326c56fa28915dbc SHA256 42e80c9a9d62b1c6389bc424161cf4e3e19e49a7b88a931292e63a8045cd8517
+MISC ChangeLog 1312 RMD160 4754f4ec2f824f8fcc8995e68636fd769d09b8c8 SHA1 9356fc3ee37223dcd14dea3b454bf39a5950168d SHA256 07a7eaefe8485071b9c686d7cf1e5e6997b541f378c6b904a5ffb6b49ba4ce2a
 MISC metadata.xml 782 RMD160 5b8dc4f4b6bdd457da62f967ec176bee2ae7e5e4 SHA1 17bc63605d0a30dca27521cf908a69c0996eab07 SHA256 a1e6bbc5427799b8607d355e3e09ce7d4de98f2a365417ec158eb56f4f00746f
-MD5 8de14dda7d318d8fb514fdbcecd4058b metadata.xml 782
-RMD160 5b8dc4f4b6bdd457da62f967ec176bee2ae7e5e4 metadata.xml 782
-SHA256 a1e6bbc5427799b8607d355e3e09ce7d4de98f2a365417ec158eb56f4f00746f metadata.xml 782
-MD5 2d47b0c6126ef14d422d2d0ff37132ff files/digest-eclipse-sdk-3.2.1-r2 596
-RMD160 f6032064c70ec5a7bb9791709ed4a7a4b40c8fbb files/digest-eclipse-sdk-3.2.1-r2 596
-SHA256 89d1e5527d12bce0f1bbad00253e32eaff2087f00fa3e6a21312c0b5bfc8b70c files/digest-eclipse-sdk-3.2.1-r2 596
