@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/eclipse-sdk
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  26 Apr 2007; Vlastimil Babka <caster@gentoo.org>
+  -eclipse-sdk-3.2.1-r2.ebuild, +eclipse-sdk-3.2.1-r3.ebuild:
+  Revbump to support split-ant; fix building with JAVA_PKG_STRICT.
 
   15 Dec 2006; Federico Fissore <federico@fsfe.org> ChangeLog:
   revised patchset. added junit4 support. patched javadocs links
